--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  grade: 1
+  class: 1
+  number: 1
+  student_id: 1
+  accreditation: MyText
+  hobby: MyText
+  image: MyText
+  user: one
+
+two:
+  grade: 1
+  class: 1
+  number: 1
+  student_id: 1
+  accreditation: MyText
+  hobby: MyText
+  image: MyText
+  user: two
