--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
+    "vue": "^2.6.14",
+    "vue-croppa": "^1.3.8",
+    "vue-cropperjs": "^5.0.0",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
   },
