--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
-    "vue-croppa": "^1.3.8",
+    "vue-cropper": "^0.5.8",
     "vue-cropperjs": "^5.0.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
@@ -23,5 +23,6 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "3"
-  }
+  },
+
 }
