--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "cropperjs": "^1.5.12",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "selectize": "^0.12.6",
     "turbolinks": "^5.2.0",
+    "vue": "^2.6.14",
+    "vue-croppa": "^1.3.8",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
   },
