--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^5.1.3",
     "cropperjs": "^1.5.12",
     "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.0",
     "popper.js": "^1.16.1",
     "selectize": "^0.12.6",
+    "tag-it": "^2.0.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
     "vue-croppa": "^1.3.8",
