--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "cropperjs": "^1.5.12",
+    "jQuery": "^1.7.4",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "popper.js": "^1.16.1",
