--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.1.4-1",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
     "cropperjs": "^1.5.12",
