--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.1.4-1",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "channels": "^0.0.4",
     "cropperjs": "^1.5.12",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
