--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "preinstall": "npx npm-force-resolutions",
   "resolutions": {
-    "glob-parent": "^5.1.2"
+    "glob-parent": "^5.1.2",
+    "ansi-regex": "^5.0.1",
+    "nth-check": "^2.0.1",
+    "minimist": "^0.2.1"
   }
 }
