--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "selectize": "^0.12.6",
     "tag-it": "^2.0.0",
     "turbolinks": "^5.2.0",
+    "vue": "^2.6.14",
+    "vue-cropper": "^0.5.8",
+    "vue-cropperjs": "^5.0.0",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "5.65.0",
     "webpack-cli": "4.9.1"
   },
