--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@popperjs/core": "^2.11.0",
+    "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.1.4-1",
+    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
-    "channels": "^0.0.4",
     "cropperjs": "^1.5.12",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
@@ -23,18 +22,11 @@
     "vue-cropperjs": "^5.0.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "5.65.0",
-    "webpack-cli": "4.9.1"
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.6.0"
-  },
-  "preinstall": "npx npm-force-resolutions",
-  "resolutions": {
-    "glob-parent": "^5.1.2",
-    "ansi-regex": "^5.0.1",
-    "nth-check": "^2.0.1",
-    "minimist": "^0.2.1"
+    "webpack-dev-server": "^3.11.3"
   }
 }
