--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.3"
+  },
+  "resolutions": {
+    "glob-parent": "^5.1.2",
+    "ansi-regex": "^5.0.1",
+    "nth-check": "^2.0.1",
+    "minimist": "^0.2.1"
   }
 }
