本番環境にデプロイする準備

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 APP_NAME = Amica
-URL = https://xxx.xxx
+URL = https://avails-amica.com
 DEVELOPMENT_GROUP = AvailsGroup
 EMAIL = avails2022@gmail.com
