RailsAdminからActiveAdminに移行

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "avails-amica",
   "private": true,
   "dependencies": {
+    "@activeadmin/activeadmin": "^2.9.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
