--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "glob-parent": "^5.1.2",
     "ansi-regex": "^5.0.1",
     "nth-check": "^2.0.1",
-    "minimist": "^0.2.1"
+    "minimist": "^0.2.1",
+    "node-forge": "^1.0.0",
+    "postcss": "^8.2.13"
   }
 }
