本番環境実装準備

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/packs
 /public/packs-test
 /node_modules
 /yarn-error.log
@@ -49,3 +48,10 @@ yarn-debug.log*
 
 /.Dockerfile.swp
 /config/credentials.yml.enc
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
