--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "vue-cropperjs": "^5.0.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^3"
   },
   "resolutions": {
     "glob-parent": "^5.1.2",
