--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "vue-cropper": "^0.5.8",
     "vue-cropperjs": "^5.0.0",
     "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   },
   "version": "0.1.0",
   "devDependencies": {
