--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nth-check": "^2.0.1",
     "minimist": "^0.2.1",
     "node-forge": "^1.0.0",
-    "postcss": "^8.2.13"
+    "postcss": "^8.2.13",
+    "follow-redirects": "^1.14.7"
   }
 }
