--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animon": "^1.0.4",
     "bootstrap": "^5.1.3",
     "channels": "^0.0.4",
+    "cookieconsent": "^3.1.1",
     "cropperjs": "^1.5.12",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
