--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nth-check": "^2.0.1",
     "minimist": "^0.2.1",
     "node-forge": "^1.0.0",
-    "follow-redirects": "^1.14.7"
+    "follow-redirects": "^1.14.8",
+    "url-parse": "^1.5.6"
   }
 }
