脆弱性の修正

--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,38 +1,38 @@
 {
-  "active_admin.js": "/packs/js/active_admin-ce5318d4e5f0454eaea7.js",
-  "active_admin.js.map": "/packs/js/active_admin-ce5318d4e5f0454eaea7.js.map",
-  "active_admin/print.js": "/packs/js/active_admin/print-cc50f01a9575cf11b138.js",
-  "active_admin/print.js.map": "/packs/js/active_admin/print-cc50f01a9575cf11b138.js.map",
-  "application.js": "/packs/js/application-dfa25ca5d8e2f2e743f5.js",
-  "application.js.map": "/packs/js/application-dfa25ca5d8e2f2e743f5.js.map",
+  "active_admin.js": "/packs/js/active_admin-c3533282d7eeadbe25e1.js",
+  "active_admin.js.map": "/packs/js/active_admin-c3533282d7eeadbe25e1.js.map",
+  "active_admin/print.js": "/packs/js/active_admin/print-eeab12967793e200e347.js",
+  "active_admin/print.js.map": "/packs/js/active_admin/print-eeab12967793e200e347.js.map",
+  "application.js": "/packs/js/application-4fe7120da3eabb6c0655.js",
+  "application.js.map": "/packs/js/application-4fe7120da3eabb6c0655.js.map",
   "communities/new.js": "/packs/js/communities/new-3fa2ac8f8d3eef1f5ce2.js",
   "communities/new.js.map": "/packs/js/communities/new-3fa2ac8f8d3eef1f5ce2.js.map",
   "entrypoints": {
     "active_admin": {
       "js": [
-        "/packs/js/active_admin-ce5318d4e5f0454eaea7.js"
+        "/packs/js/active_admin-c3533282d7eeadbe25e1.js"
       ],
       "js.map": [
-        "/packs/js/active_admin-ce5318d4e5f0454eaea7.js.map"
+        "/packs/js/active_admin-c3533282d7eeadbe25e1.js.map"
       ]
     },
-    "active_admin/print": {
+    "active_admin\\print": {
       "js": [
-        "/packs/js/active_admin/print-cc50f01a9575cf11b138.js"
+        "/packs/js/active_admin/print-eeab12967793e200e347.js"
       ],
       "js.map": [
-        "/packs/js/active_admin/print-cc50f01a9575cf11b138.js.map"
+        "/packs/js/active_admin/print-eeab12967793e200e347.js.map"
       ]
     },
     "application": {
       "js": [
-        "/packs/js/application-dfa25ca5d8e2f2e743f5.js"
+        "/packs/js/application-4fe7120da3eabb6c0655.js"
       ],
       "js.map": [
-        "/packs/js/application-dfa25ca5d8e2f2e743f5.js.map"
+        "/packs/js/application-4fe7120da3eabb6c0655.js.map"
       ]
     },
-    "communities/new": {
+    "communities\\new": {
       "js": [
         "/packs/js/communities/new-3fa2ac8f8d3eef1f5ce2.js"
       ],
@@ -40,7 +40,7 @@
         "/packs/js/communities/new-3fa2ac8f8d3eef1f5ce2.js.map"
       ]
     },
-    "home/home": {
+    "home\\home": {
       "js": [
         "/packs/js/home/home-fc2452b5a37d1117bc98.js"
       ],
@@ -48,7 +48,7 @@
         "/packs/js/home/home-fc2452b5a37d1117bc98.js.map"
       ]
     },
-    "home/index": {
+    "home\\index": {
       "js": [
         "/packs/js/home/index-96b39fb104d87cbcd8d9.js"
       ],
@@ -56,7 +56,7 @@
         "/packs/js/home/index-96b39fb104d87cbcd8d9.js.map"
       ]
     },
-    "home/settings": {
+    "home\\settings": {
       "js": [
         "/packs/js/home/settings-f778dc1436f204762ec7.js"
       ],
@@ -64,7 +64,7 @@
         "/packs/js/home/settings-f778dc1436f204762ec7.js.map"
       ]
     },
-    "profiles/badge": {
+    "profiles\\badge": {
       "js": [
         "/packs/js/profiles/badge-6f4706a9633a75864d5d.js"
       ],
@@ -72,7 +72,7 @@
         "/packs/js/profiles/badge-6f4706a9633a75864d5d.js.map"
       ]
     },
-    "profiles/edit": {
+    "profiles\\edit": {
       "js": [
         "/packs/js/profiles/edit-cdd5815722cdcdd7ea1e.js"
       ],
@@ -80,7 +80,7 @@
         "/packs/js/profiles/edit-cdd5815722cdcdd7ea1e.js.map"
       ]
     },
-    "profiles/header_edit": {
+    "profiles\\header_edit": {
       "js": [
         "/packs/js/profiles/header_edit-5e2a1939995d7961c9ce.js"
       ],
@@ -88,7 +88,7 @@
         "/packs/js/profiles/header_edit-5e2a1939995d7961c9ce.js.map"
       ]
     },
-    "timeline/main": {
+    "timeline\\main": {
       "js": [
         "/packs/js/timeline/main-c47c8b7b6d20885e53ab.js"
       ],
