--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "minimist": "^1.2.6",
     "node-forge": "^1.3.0",
     "follow-redirects": "^1.14.8",
-    "url-parse": "^1.5.6"
+    "url-parse": "^1.5.6",
+    "eventsource" : "^2.0.2"
   }
 }
