--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "node-forge": "^1.3.0",
     "follow-redirects": "^1.14.8",
     "url-parse": "^1.5.6",
-    "eventsource" : "^2.0.2"
+    "eventsource" : "^2.0.2",
+    "loader-utils": "^2.0.4",
+    "terser": "^5.14.2"
   }
 }
