--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "channels": "^0.0.4",
     "cookieconsent": "^3.1.1",
     "cropperjs": "^1.5.12",
+    "follow-redirects": "^1.14.8",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.2",
     "lity": "^2.4.1",
+    "minimist": "^1.2.6",
+    "nth-check": "^2.0.1",
     "particles.js": "^2.0.0",
     "popper.js": "^1.16.1",
     "sal.js": "^0.8.5",
     "selectize": "^0.12.6",
     "tag-it": "^2.0.0",
+    "terser": "^5.14.2",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
     "vue-cropper": "^0.5.8",
@@ -42,7 +46,7 @@
     "node-forge": "^1.3.0",
     "follow-redirects": "^1.14.8",
     "url-parse": "^1.5.6",
-    "eventsource" : "^2.0.2",
+    "eventsource": "^2.0.2",
     "loader-utils": "^2.0.4",
     "terser": "^5.14.2"
   }
